# dnd-spells

./: .gitignore  Cargo.toml  README.md  all-spells.json  convert_spells.py  instructions.md  main.py  markup.md  pyproject.toml  test_convert_spells.py  zip_for_publish.py
.github/instructions/: markup.md
.github/workflows/: release.yml
examples/spells_json/: Alarm.json  Gaseous Form.json  Sending.json  Storm of Vengeance.json
examples/spells_markdown/: Control Weather.md  Gaseous Form.md  Meteor Swarm.md  Storm of Vengeance.md  Thunderwave.md
src/: convert.rs  lib.rs  main.rs  markup.rs  zipdir.rs
tests/: convert_rust.rs  markup_rust.rs  test_spell_to_markdown.py
tests/spells_expected/: Aid.md  Alarm.md  Control Weather.md  Feather Fall.md  Gaseous Form.md  Sending.md
tests/spells_json/: Aid.json  Control Weather.json  Feather Fall.json  Meteor Swarm.json  Thunderwave.json
tests/utils/: test_convert.py  test_markup.py
utils/: convert.py  markup.py
