[package]
name = "dnd-spells"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde_json = "1"
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = "1"
